# informed_sampling

./: .gitignore  pyproject.toml
informed_sampling/: assess.py  generate.py  paraboloid.py
tests/: test_generate.py  test_paraboloid.py
