[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "informed_sampling"
version = "0.1.0"
description = "Basic tools to model sampling on a paraboloid with uncertainty"
readme = "README.md"
authors = [{ name = "Your Name", email = "your@email.com" }]
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
